global menu: fix counter contrast

--- a/app/modules/general/scss/_top_bar.scss
+++ b/app/modules/general/scss/_top_bar.scss
@@ -32,7 +32,7 @@ nav#top-bar{
     @include bg-hover-lighten($topbar-bg-color);
     font-size: 1.1em;
     padding: 0.8em 1em;
-    span{
+    span:not(.counter){
       color: white;
     }
     .fa{
